`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/pages/components/accordion.mdx
+++ b/src/pages/components/accordion.mdx
@@ -12,7 +12,7 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We craft tailored AI strategies aligned with your business goals and industry-specific needs, ensuring a roadmap for successful AI implementation and integration.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary"><span className="text-primary">•</span></span> Customized AI roadmap for your business</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Customized AI roadmap for your business</li>
               <li class="text-gray-950 font-light"><span className="text-primary">•</span> Alignment with industry trends and best practices</li>
               <li class="text-gray-950 font-light"><span className="text-primary">•</span> Scalable solutions for long-term growth</li>
               <li class="text-gray-950 font-light"><span className="text-primary">•</span> Risk assessment and mitigation strategies</li>
@@ -35,7 +35,7 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We implement advanced language models for tasks such as content generation, sentiment analysis, and chatbots, enhancing communication and data processing capabilities.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary"><span className="text-primary">•</span></span> Advanced text analysis and understanding</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Advanced text analysis and understanding</li>
               <li class="text-gray-950 font-light"><span className="text-primary">•</span> Automated content generation</li>
               <li class="text-gray-950 font-light"><span className="text-primary">•</span> Multilingual support</li>
               <li class="text-gray-950 font-light"><span className="text-primary">•</span> Sentiment analysis for customer insights</li>
@@ -52,22 +52,183 @@ draft: false
     </Accordion>
   </div>
   <div class="mb-1">
-  <Accordion client:load title="03. GenAI Strategy Development">
+  <Accordion client:load title="03. Computer Vision Applications">
+    <section class="px-6 py-14">
+      <div class="flex flex-row flex-wrap items-center justify-between">
+        <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+          <h5 class="text-lg leading-6">We develop AI systems for image and video analysis, object detection, and visual content generation, opening new possibilities in various industries.</h5>
+          <ul class="mt-4 text-md leading-6">
+            <li class="text-gray-950 font-light"><span className="text-primary">•</span> Real-time image and video analysis</li>
+            <li class="text-gray-950 font-light"><span className="text-primary">•</span> Object detection and classification</li>
+            <li class="text-gray-950 font-light"><span className="text-primary">•</span> Facial recognition (with ethical considerations)</li>
+            <li class="text-gray-950 font-light"><span className="text-primary">•</span> Visual content generation for marketing and design</li>
+          </ul>
+        </div>
+        <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+          <h5 class="text-lg leading-6">Use Case</h5>
+          <p class="mt-4 text-md leading-6">
+            For a manufacturing client, we implemented a computer vision system for quality control, reducing defects by 40% and increasing production efficiency by 25%.
+          </p>
+        </div>
+      </div>
+    </section>
+  </Accordion>
+  </div>
+  <div class="mb-1">
+    <Accordion client:load title="04. Predictive Analytics and Forecasting">
       <section class="px-6 py-14">
         <div class="flex flex-row flex-wrap items-center justify-between">
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
-            <h5 class="text-lg leading-6">We craft tailored AI strategies aligned with your business goals and industry-specific needs, ensuring a roadmap for successful AI implementation and integration.</h5>
+            <h5 class="text-lg leading-6">We utilize GenAI for advanced data analysis and predictive modeling, helping businesses make data-driven decisions and anticipate future trends.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary"><span className="text-primary">•</span></span> Customized AI roadmap for your business</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Alignment with industry trends and best practices</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Scalable solutions for long-term growth</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Risk assessment and mitigation strategies</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Advanced data analysis techniques</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Accurate forecasting models</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Risk assessment and mitigation</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Optimization of business processes</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">Use Case</h5>
             <p class="mt-4 text-md leading-6">
-              For a major e-commerce retailer, we developed a GenAI strategy that included personalized recommendation systems, inventory optimization, and customer service chatbots, resulting in a 30% increase in sales and 40% improvement in customer satisfaction.
+              We developed a predictive analytics model for a retail chain, improving inventory management and reducing stock outs by 35%, while increasing overall sales by 20%.
+            </p>
+          </div>
+        </div>
+      </section>
+    </Accordion>
+    </div>
+  <div class="mb-1">
+    <Accordion client:load title="05. Process Automation with AI">
+      <section class="px-6 py-14">
+        <div class="flex flex-row flex-wrap items-center justify-between">
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">We integrate GenAI into existing workflows to enhance efficiency and reduce manual tasks, streamlining operations across your organization.</h5>
+            <ul class="mt-4 text-md leading-6">
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Workflow optimization</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Reduction of manual tasks</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Increased accuracy and consistency</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Scalable automation solutions</li>
+            </ul>
+          </div>
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">Use Case</h5>
+            <p class="mt-4 text-md leading-6">
+              For a logistics company, we implemented an AI-driven process automation system, reducing order processing time by 70% and minimizing errors by 90%.
+            </p>
+          </div>
+        </div>
+      </section>
+    </Accordion>
+    </div>
+  <div class="mb-1">
+    <Accordion client:load title="06. Personalization Engines">
+      <section class="px-6 py-14">
+        <div class="flex flex-row flex-wrap items-center justify-between">
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">We create AI-driven systems for personalized user experiences and recommendations, enhancing customer engagement and satisfaction.</h5>
+            <ul class="mt-4 text-md leading-6">
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Tailored user experiences</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Improved customer engagement</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Increased conversion rates</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Dynamic content delivery</li>
+            </ul>
+          </div>
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">Use Case</h5>
+            <p class="mt-4 text-md leading-6">
+              We developed a personalization engine for a streaming service, resulting in a 50% increase in user engagement and a 40% reduction in churn rate.
+            </p>
+          </div>
+        </div>
+      </section>
+    </Accordion>
+    </div>
+  <div class="mb-1">
+    <Accordion client:load title="07. AI-Assisted Design and Creative Tools">
+      <section class="px-6 py-14">
+        <div class="flex flex-row flex-wrap items-center justify-between">
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">We implement GenAI solutions for automated design processes and creative content generation, revolutionizing the creative industry.</h5>
+            <ul class="mt-4 text-md leading-6">
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Automated design suggestions</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Content generation for marketing materials</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Style transfer and image manipulation</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Rapid prototyping and iteration</li>
+            </ul>
+          </div>
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">Use Case</h5>
+            <p class="mt-4 text-md leading-6">
+              For a marketing agency, we implemented AI-assisted design tools that increased creative output by 200% and reduced design iteration time by 60%.
+            </p>
+          </div>
+        </div>
+      </section>
+    </Accordion>
+    </div>
+  <div class="mb-1">
+    <Accordion client:load title="08. Data Augmentation and Synthetic Data Generation">
+      <section class="px-6 py-14">
+        <div class="flex flex-row flex-wrap items-center justify-between">
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">We use GenAI to create diverse datasets for improved AI model training, enhancing the performance and reliability of AI systems.</h5>
+            <ul class="mt-4 text-md leading-6">
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Creation of diverse, synthetic datasets</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Improved model performance and generalization</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Reduced data collection costs</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Privacy-preserving data generation</li>
+            </ul>
+          </div>
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">Use Case</h5>
+            <p class="mt-4 text-md leading-6">
+              For a healthcare AI project, we used synthetic data generation to create a diverse dataset of medical images, improving diagnostic accuracy by 25% while maintaining patient privacy.
+            </p>
+          </div>
+        </div>
+      </section>
+    </Accordion>
+    </div>
+  <div class="mb-1">
+    <Accordion client:load title="09. AI Model Fine-tuning and Optimization">
+      <section class="px-6 py-14">
+        <div class="flex flex-row flex-wrap items-center justify-between">
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">We customize pre-trained models for specific business use cases and performance enhancement, ensuring optimal AI performance for your unique needs.</h5>
+            <ul class="mt-4 text-md leading-6">
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Customization of state-of-the-art AI models</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Performance optimization for specific use cases</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Reduced training time and costs</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Improved model accuracy and efficiency</li>
+            </ul>
+          </div>
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">Use Case</h5>
+            <p class="mt-4 text-md leading-6">
+              We fine-tuned a large language model for a legal tech company, improving contract analysis accuracy by 40% and reducing processing time by 60%.
+            </p>
+          </div>
+        </div>
+      </section>
+    </Accordion>
+    </div>
+  <div class="mb-1">
+    <Accordion client:load title="10. Ethical AI and Governance">
+      <section class="px-6 py-14">
+        <div class="flex flex-row flex-wrap items-center justify-between">
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">We develop AI systems for image and video analysis, object detection, and visual content generation, opening new possibilities in various industries.</h5>
+            <ul class="mt-4 text-md leading-6">
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Ethical AI framework development</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Bias detection and mitigation</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Transparency and explainability in AI decisions</li>
+              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Compliance with AI regulations and standards</li>
+            </ul>
+          </div>
+          <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
+            <h5 class="text-lg leading-6">Use Case</h5>
+            <p class="mt-4 text-md leading-6">
+              We developed an ethical AI governance framework for a financial institution, ensuring fair lending practices and improving regulatory compliance while maintaining high performance in credit risk assessment.
             </p>
           </div>
         </div>
