`juan-jaramillo-ai-consulting-services` Website 0.1 Beta

--- a/src/content/careers/-index.mdx
+++ b/src/content/careers/-index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Career
-page_title: "Career In Pinwheel"
+title: Industries
+page_title: "We leverage our expertise in Generative AI to provide tailored solutions across a wide range of industries."
 image: "/images/career/career-hero-image.png"
 benifits:
   title: Competitive salary
@@ -47,4 +47,4 @@ career:
   subtitle: Pellentesque in ipsum id orci porta dapibus. Lorem ipsum dolor amet, consectetur <br/> adipiscing elit. Praesent sapien massa, convallis
 ---
 
-Donec sollicitudin molestie malesda. Donec sollitudin molestie malesuada Mauris <br/> pellentesque nec egestas non nisi Cras
+Our deep understanding of sector-specific challenges allows us to deliver<br />innovative AI applications that drive growth, efficiency, and competitive advantage.
