--- a/src/pages/components/accordion.mdx
+++ b/src/pages/components/accordion.mdx
@@ -3,8 +3,8 @@ title: "Accordion"
 draft: false
 ---
 
-<h2 class="lg:mt-6 lg:text-4xl text-center">Our Services</h2>
-<section class="mt-10 mx-6">
+<section class="mt-10 mx-32">
+  <h2 class="lg:mb-8 lg:text-4xl text-center">Our Services</h2>
   <div class="mb-1">
     <Accordion client:load title="01. GenAI Strategy Development">
       <section class="px-6 py-14">
@@ -12,10 +12,10 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We craft tailored AI strategies aligned with your business goals and industry-specific needs, ensuring a roadmap for successful AI implementation and integration.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Customized AI roadmap for your business</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Alignment with industry trends and best practices</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Scalable solutions for long-term growth</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Risk assessment and mitigation strategies</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Customized AI roadmap for your business</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Alignment with industry trends and best practices</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Scalable solutions for long-term growth</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Risk assessment and mitigation strategies</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
@@ -35,10 +35,10 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We implement advanced language models for tasks such as content generation, sentiment analysis, and chatbots, enhancing communication and data processing capabilities.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Advanced text analysis and understanding</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Automated content generation</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Multilingual support</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Sentiment analysis for customer insights</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Advanced text analysis and understanding</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Automated content generation</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Multilingual support</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Sentiment analysis for customer insights</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
@@ -58,10 +58,10 @@ draft: false
         <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
           <h5 class="text-lg leading-6">We develop AI systems for image and video analysis, object detection, and visual content generation, opening new possibilities in various industries.</h5>
           <ul class="mt-4 text-md leading-6">
-            <li class="text-gray-950 font-light"><span className="text-primary">•</span> Real-time image and video analysis</li>
-            <li class="text-gray-950 font-light"><span className="text-primary">•</span> Object detection and classification</li>
-            <li class="text-gray-950 font-light"><span className="text-primary">•</span> Facial recognition (with ethical considerations)</li>
-            <li class="text-gray-950 font-light"><span className="text-primary">•</span> Visual content generation for marketing and design</li>
+            <li class="text-gray-900 font-light"><span className="text-primary">•</span> Real-time image and video analysis</li>
+            <li class="text-gray-900 font-light"><span className="text-primary">•</span> Object detection and classification</li>
+            <li class="text-gray-900 font-light"><span className="text-primary">•</span> Facial recognition (with ethical considerations)</li>
+            <li class="text-gray-900 font-light"><span className="text-primary">•</span> Visual content generation for marketing and design</li>
           </ul>
         </div>
         <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
@@ -81,10 +81,10 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We utilize GenAI for advanced data analysis and predictive modeling, helping businesses make data-driven decisions and anticipate future trends.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Advanced data analysis techniques</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Accurate forecasting models</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Risk assessment and mitigation</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Optimization of business processes</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Advanced data analysis techniques</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Accurate forecasting models</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Risk assessment and mitigation</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Optimization of business processes</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
@@ -104,10 +104,10 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We integrate GenAI into existing workflows to enhance efficiency and reduce manual tasks, streamlining operations across your organization.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Workflow optimization</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Reduction of manual tasks</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Increased accuracy and consistency</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Scalable automation solutions</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Workflow optimization</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Reduction of manual tasks</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Increased accuracy and consistency</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Scalable automation solutions</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
@@ -127,10 +127,10 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We create AI-driven systems for personalized user experiences and recommendations, enhancing customer engagement and satisfaction.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Tailored user experiences</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Improved customer engagement</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Increased conversion rates</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Dynamic content delivery</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Tailored user experiences</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Improved customer engagement</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Increased conversion rates</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Dynamic content delivery</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
@@ -150,10 +150,10 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We implement GenAI solutions for automated design processes and creative content generation, revolutionizing the creative industry.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Automated design suggestions</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Content generation for marketing materials</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Style transfer and image manipulation</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Rapid prototyping and iteration</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Automated design suggestions</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Content generation for marketing materials</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Style transfer and image manipulation</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Rapid prototyping and iteration</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
@@ -173,10 +173,10 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We use GenAI to create diverse datasets for improved AI model training, enhancing the performance and reliability of AI systems.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Creation of diverse, synthetic datasets</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Improved model performance and generalization</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Reduced data collection costs</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Privacy-preserving data generation</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Creation of diverse, synthetic datasets</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Improved model performance and generalization</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Reduced data collection costs</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Privacy-preserving data generation</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
@@ -196,10 +196,10 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We customize pre-trained models for specific business use cases and performance enhancement, ensuring optimal AI performance for your unique needs.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Customization of state-of-the-art AI models</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Performance optimization for specific use cases</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Reduced training time and costs</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Improved model accuracy and efficiency</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Customization of state-of-the-art AI models</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Performance optimization for specific use cases</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Reduced training time and costs</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Improved model accuracy and efficiency</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
@@ -219,10 +219,10 @@ draft: false
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
             <h5 class="text-lg leading-6">We develop AI systems for image and video analysis, object detection, and visual content generation, opening new possibilities in various industries.</h5>
             <ul class="mt-4 text-md leading-6">
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Ethical AI framework development</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Bias detection and mitigation</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Transparency and explainability in AI decisions</li>
-              <li class="text-gray-950 font-light"><span className="text-primary">•</span> Compliance with AI regulations and standards</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Ethical AI framework development</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Bias detection and mitigation</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Transparency and explainability in AI decisions</li>
+              <li class="text-gray-900 font-light"><span className="text-primary">•</span> Compliance with AI regulations and standards</li>
             </ul>
           </div>
           <div class="mt-0 text-left sm:col-6 md:col-4 lg:col-5 md:mb-0">
